--- a/Frontend/src/Components/VC Stack/VCStackForm.css
+++ b/Frontend/src/Components/VC Stack/VCStackForm.css
@@ -1,36 +1,45 @@
-.vcstack-form-form-container {
+.vcstackform-container {
   text-align: left;
-  margin: 10%;
-  padding: 3%;
+  margin: 10% 25%;
   max-width: 100%;
 }
 
-.vcstack-form-header-content h1 {
-  font-size: 50px;
+.vcstackform-header-logo img {
+  width: 12%;
+}
+
+.vcstackform-header-content h1 {
+  font-size: 45px;
   margin: 16px 0;
 }
 
-.vcstack-form-header-logo img {
-  width: 10%;
-  margin-top: -55px;
-  margin-bottom: 15px;
+.vcstackform-header-content h2 {
+  font-size: 18px;
+  font-weight: 100;
+  margin-bottom: 1rem;
 }
 
-.vcstack-form-registration-form-content select {
+.vcstackform-header-content p {
+  text-decoration: underline;
+  margin: 1rem 0;
+  color: blue;
+}
+
+.vcstackform-registration-form-content input {
+  border-radius: 5px;
+  padding: 8px;
+  width: 50%;
+  margin-bottom: 25px;
+}
+
+.vcstackform-registration-form-content select {
   border-radius: 5px;
   padding: 10px;
   width: 50%;
   margin-bottom: 16px;
 }
 
-.vcstack-form-registration-form-content textarea {
-  border-radius: 5px;
-  padding: 14px;
-  width: 100%;
-  margin-bottom: 15px;
-}
-
-.vcstack-form-registration-form-content button {
+.vcstackform-registration-form-content button {
   border-radius: 5px;
   background-color: black;
   color: white;
@@ -38,28 +47,35 @@
   margin-top: 15px;
 }
 
-.vcstack-form-registration-form-content h2 {
-  color: rgb(66, 66, 169);
-  font-size: 18px;
-  margin-top: 15px;
-  margin-bottom: 15px;
+@media (max-width: 1024px) {
+  .vcstackform-container {
+    margin: 10% 20%;
+  }
 }
 
-.vcstack-form-registration-form-content p {
-  margin-top: 15px;
+@media (max-width: 768px) {
+  .vcstackform-container {
+    margin: 13% 15%;
+  }
+  .vcstackform-header-content h1 {
+    font-size: 35px;
+  }
+  .vcstackform-header-content h2 {
+    font-size: 16px;
+  }
 }
 
 @media (max-width: 480px) {
-  .vcstack-form-container {
-    margin: 100px 0px 0px 0px;
-    padding-bottom: 20px;
-    max-width: 100%;
+  .vcstackform-container {
+    margin: 28% 10%;
   }
-  .vcstack-form-header-content h1 {
-    font-size: 30px;
+  .vcstackform-header-content h1 {
+    font-size: 25px;
   }
-
-  .vcstack-form-registration-form-content textarea {
-    max-width: 90%;
+  .vcstackform-header-content h2 {
+    font-size: 15px;
+  }
+  .vcstackform-registration-form-content input {
+    width: 100%;
   }
 }
