--- a/Frontend/src/Components/Card/cardframe.css
+++ b/Frontend/src/Components/Card/cardframe.css
@@ -68,6 +68,7 @@
   color: white;
   font-weight: bold;
   cursor: pointer;
+  text-decoration: none;
 }
 
 .pitch-button {
@@ -124,6 +125,7 @@
   border-radius: 10px;
   transition: background-color 0.3s, color 0.3s;
   padding: 5px 10px 5px 10px;
+  text-decoration: none;
 }
 
 .back-button:hover {
