--- a/Frontend/src/Components/About/About.css
+++ b/Frontend/src/Components/About/About.css
@@ -253,6 +253,13 @@
     font-size: 30px;
     margin: 1rem 0;
   }
+
+  .about-lastdiv-cards {
+    width: 85%;
+  }
+  .about-lastdiv-card-content {
+    padding: 0 2rem 0 4rem;
+  }
 }
 
 @media (max-width: 768px) {
@@ -272,6 +279,17 @@
   .testimonial-header button {
     width: 40px;
     height: 40px;
+  }
+
+  .about-lastdiv-card-content,
+  .about-lastdiv-card-image {
+    width: 100%;
+  }
+  .about-odd-div {
+    flex-wrap: wrap;
+  }
+  .about-even-div {
+    flex-wrap: wrap-reverse;
   }
 }
 
@@ -296,5 +314,21 @@
   .testimonial-header button {
     width: 25px;
     height: 25px;
+  }
+
+  .about-lastdiv {
+    padding-bottom: 1rem;
+  }
+  .about-lastdiv-cards {
+    width: 95%;
+  }
+  .about-lastdiv-card-content {
+    padding: 2rem 0 2rem 2rem;
+  }
+  .about-lastdiv-card-content h2 {
+    font-size: 1.5rem;
+  }
+  .about-lastdiv-card-content li {
+    font-size: 1rem;
   }
 }
