--- a/Frontend/src/Components/Fundraising/FundraisingPage.css
+++ b/Frontend/src/Components/Fundraising/FundraisingPage.css
@@ -127,7 +127,7 @@ body {
 
 #about img {
   width: 35%;
-  max-width: 500px;
+  max-width: 600px;
   height: auto;
   margin-right: 20px;
 }
@@ -233,7 +233,7 @@ body {
 
 .text-content {
   order: 1;
-  max-width: 500px;
+  max-width: 600px;
   font-size: 1rem;
   text-align: left;
 }
@@ -322,7 +322,7 @@ body {
 }
 
 #image3 img {
-  max-width: 100%;
+  max-width: 500px;
   height: auto;
 }
 
@@ -368,22 +368,49 @@ body {
 
 /* Responsive Design */
 @media (max-width: 1024px) {
-  .cta-button#ctaButtonMeeting {
+  #image4 {
+      flex-direction: column;
+      padding: 10px;
+      margin-bottom: 20px; 
+  }
+  #image4 img {
+      width: 35%;
+  }
+  
+
+  .text-content {
+      max-width: 60%;
+  }
+
+  .cta-button#ctaButtonDataRoom {
       font-size: 14px;
       padding: 8px 16px;
   }
 }
 
 @media (max-width: 768px) {
-  #image3 {
+  #image4 {
+      flex-direction: column;
       padding: 10px;
+      margin-bottom: 20px; 
   }
 
-  .cta-button#ctaButtonMeeting {
+  #image4 img {
+      width: 100%;
+      margin-left: 0;
+      margin-bottom: 20px;
+  }
+
+  .text-content {
+      text-align: center;
+  }
+
+  .cta-button#ctaButtonDataRoom {
       font-size: 14px;
       padding: 8px 16px;
   }
 }
+
 
 #image4 {
   margin-top: 0px;
@@ -398,8 +425,8 @@ body {
 
 #image4 img {
   order: 2;
-  width: 40%;
-  max-width: 500px;
+  width: 50%;
+  max-width: 600px;
   height: auto;
   margin-left: 20px;
 }
