--- a/Frontend/src/Components/Venture OS/VentureOS.css
+++ b/Frontend/src/Components/Venture OS/VentureOS.css
@@ -12,28 +12,20 @@
   color: rgb(105, 39, 218);
 }
 
-.venture-container p {
-  text-align: center;
-  font-size: 18px;
-}
-
 .venture-main-div {
   width: 60%;
   margin: 2.5rem auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .venture-main-div img {
   width: 100%;
 }
 
-.venture-main-button {
-  width: 400px;
-  margin: 2rem auto;
-  display: flex;
-  justify-content: space-around;
-}
-
-.venture-main-button button {
+.venture-main-div button {
+  width: 180px;
   padding: 12px 24px;
   font-size: 1rem;
   border-radius: 12px;
@@ -42,7 +34,7 @@
   border: 1px solid #4a3aff;
 }
 
-.venture-main-button button:hover {
+.venture-main-div button:hover {
   background-color: white;
   color: #4a3aff;
 }
@@ -136,6 +128,10 @@
 }
 
 @media (max-width: 480px) {
+  .venture-container h1 {
+    font-size: 2rem;
+  }
+
   .venture-main-buttons {
     width: 300px;
   }
